--- a/source/assets/styles/style.css
+++ b/source/assets/styles/style.css
@@ -9,3 +9,15 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.fill-screen {
+  min-height: 100%;
+  height: 100%;
+}
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body {
+  height: 100%;
+}
