--- a/source/assets/styles/style.css
+++ b/source/assets/styles/style.css
@@ -1,7 +1,7 @@
 .parallax {
   /* The image used */
   /*background-color: black;*/
-  background-image: url(../pics/index.png);
+  background-image: url(../pics/index.webp);
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
