--- a/source/assets/styles/style.css
+++ b/source/assets/styles/style.css
@@ -19,5 +19,14 @@
   justify-content: center;
 }
 body {
+  font-family: 'Roboto', sans-serif;
   height: 100%;
+}
+
+p {
+  font-size: 1.05rem;
+}
+
+#bigNameTitle {
+  font-size: 7vw;
 }
