Updated Skills, outlined contact links

--- a/source/assets/styles/style.css
+++ b/source/assets/styles/style.css
@@ -18,6 +18,11 @@
   align-items: center;
   justify-content: center;
 }
+.site-links-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
