--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  font-family: 'Roboto', sans-serif;
   height: 100%;
 }
+
+// NOTE: removed from angular.json because there's nothing here 
