--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   <div class="pb-4 mt-2 container-fluid" id="skills">
     <h1 class="text-light text-center py-4">Skills</h1>
     <div class="row py-3">
-      <div class="col pt-2 skill" *ngFor="let skill of skills">
+      <div class="col pt-2 skill mx-md-5" *ngFor="let skill of skills">
         <fa-icon [icon]=skill.icon size="10x" [styles]="{'stroke': 'white', 'color': 'white'}"></fa-icon>
         <h3 class="text-light d-block pt-2">{{skill.name}}</h3>
       </div>
@@ -78,7 +78,7 @@
   <div class="pb-4 mt-3 text-white" id="projects">
     <h1 class="text-center py-5 text-light">Projects</h1>
     <div class="card border border-dark bg-dark text-light" *ngFor="let project of resumeProjects">
-      <div class="card-body">
+      <div class="card-body ml-4">
         <h5 class="card-title">{{ project.title }}</h5>
         <p class="card-text">
           {{ project.description }}
