--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,8 @@ p {
 .skill {
   align-items: center;
   text-align: center;
+  margin-left: 6rem;
+  margin-right: 6rem;
 
   fa-icon {
     font-size: 1.5rem;
