--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   <div class="pb-4 mt-2 container-fluid" id="skills">
     <h1 class="text-light text-center py-4">Skills</h1>
     <div class="row py-3">
-      <div class="col pt-2 skill mx-md-5" *ngFor="let skill of skills">
+      <div class="col pt-2 skill" *ngFor="let skill of skills">
         <fa-icon [icon]=skill.icon size="10x" [styles]="{'stroke': 'white', 'color': 'white'}"></fa-icon>
         <h3 class="text-light d-block pt-2">{{skill.name}}</h3>
       </div>
