--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           </a>
         </div>
         <div class="col text-center ">
-          <a type="button" class="btn btn-primary mx-auto" href="www.linkedin.com/in/sam-baumohl09">Linkedin
+          <a type="button" class="btn btn-primary mx-auto" href="https://www.linkedin.com/in/sam-baumohl09">Linkedin
             <fa-icon [icon]="['fab','linkedin']"></fa-icon>
           </a>
         </div>
