--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,11 +42,9 @@
   </div>
 
   <div class="parallax pb-4 mt-3" id="debate">
-    <h1 class="text-center py-5">Debate Casefiles</h1>
+    <h1 class="text-center pt-5 pb-2">Debate Casefiles</h1>
     <p class="text-center pt-0 pb-4">
-      These casefiles are a mix of evidence I gathered and pre-annotated evidence I
-      found. These are the
-      casefiles I used in tournaments.
+      These are case files that I have used in tournaments. 
     </p>
     <div class="container-fluid">
       <div class="row">
@@ -92,25 +90,3 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="parallax pb-4 mt-3" id="resume">
-    <h1 class="text-center py-5">Resume</h1>
-    <div class="pb-5">
-      <div class="card mx-auto mb-xs-3" style="max-width: 25rem;" id="loginCard">
-        <div class="card-body">
-          <h5 class="card-title">Password Required</h5>
-          <h6 class="card-subtitle mb-2 text-muted">
-            For privacy reasons, I won't publicly display my full resume.
-          </h6>
-          <form>
-            <div class="form-group">
-              <input class="form-control mr-1 mb-1 mt-2 d-inline-block" type="password" id="PasswordInput"
-                placeholder="Password" style="width: 15rem;height: 2.5rem;" />
-              <input class="btn btn-primary mb-1 mt-1 d-inline-block" type="button" value="Submit"
-                onclick="CheckPassword()" />
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div> -->
