--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,15 @@
-.parallax {
-  /* The image used */
-  /*background-color: black;*/
-  background-image: url(../assets/background/index.webp);
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.fill-screen {
-  min-height: 100%;
-  height: 100%;
-}
-
-.flex-center {
+.name-header {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  @media only screen and (min-width: 768px) {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+  color: rgba(255, 255, 255, 0.92);
+  background-color: rgba(0, 0, 0, 0.92);
 }
 
 .site-links-group {
@@ -32,16 +23,17 @@ p {
 }
 
 .skill {
+  color: rgba(255, 255, 255, 0.92);
   align-items: center;
   text-align: center;
 
   fa-icon {
     font-size: 1.5rem;
   }
-
 }
 
-.debate-buttons {
-  position: absolute;
-  bottom: 20px;
+@media only screen and (min-width: 768px) {
+  .section {
+    max-width: 70%;
+  }
 }
