--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="component-container">
   <div class="name-header">
     <div class="d-inline-block">
       <h1 class="position-relative text-center container" id="bigNameTitle">
@@ -6,25 +7,45 @@
       <h4 class="text-center d-block mb-1">
         Sam Baumohl is a full-stack developer from Missouri.
       </h4>
-      <div class="site-links-group row mt-3 mx-auto px-0 container" role="group" aria-label="Site Links">
+      <div
+        class="site-links-group row mt-3 mx-auto px-0 container"
+        role="group"
+        aria-label="Site Links"
+      >
         <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-success mx-auto" href="https://github.com/MeMeBigProgrammer">Github
-            <fa-icon [icon]="['fab','github']"></fa-icon>
+          <a
+            type="button"
+            class="btn btn-success mx-auto"
+            href="https://github.com/MeMeBigProgrammer"
+            >Github
+            <fa-icon [icon]="['fab', 'github']"></fa-icon>
           </a>
         </div>
         <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-warning mx-auto" href="assets/pgp/key.txt">PGP
-            <fa-icon [icon]="['fas','key']"></fa-icon>
+          <a
+            type="button"
+            class="btn btn-warning mx-auto"
+            href="assets/pgp/key.txt"
+            >PGP
+            <fa-icon [icon]="['fas', 'key']"></fa-icon>
           </a>
         </div>
         <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-info mx-auto" href="mailto:mail@sambaumohl.me">Email
-            <fa-icon [icon]="['fas','envelope']"></fa-icon>
+          <a
+            type="button"
+            class="btn btn-info mx-auto"
+            href="mailto:mail@sambaumohl.me"
+            >Email
+            <fa-icon [icon]="['fas', 'envelope']"></fa-icon>
           </a>
         </div>
         <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-primary mx-auto" href="https://www.linkedin.com/in/sam-baumohl09">Linkedin
-            <fa-icon [icon]="['fab','linkedin']"></fa-icon>
+          <a
+            type="button"
+            class="btn btn-primary mx-auto"
+            href="https://www.linkedin.com/in/sam-baumohl09"
+            >Linkedin
+            <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
           </a>
         </div>
       </div>
@@ -34,27 +55,43 @@
   <div class="pb-4 mt-2 container-fluid section" id="skills">
     <h1 class="text-center py-4">Skills</h1>
     <div class="row py-3">
-      <div class="col pt-2 skill px-md-2" *ngFor="let skill of skills">
-        <fa-icon [icon]=skill.icon size="6x" [styles]="{'stroke': 'white', 'color': 'white'}"></fa-icon>
-        <h3 class="d-block pt-2">{{skill.name}}</h3>
+      <div class="col pt-2 skill px-md-4" *ngFor="let skill of skills">
+        <fa-icon
+          [icon]="skill.icon"
+          size="6x"
+          [styles]="{
+            stroke: 'rgba(255, 255, 255, 0.92)',
+            color: 'rgba(255, 255, 255, 0.92)'
+          }"
+        ></fa-icon>
+        <h3 class="d-block pt-2">{{ skill.name }}</h3>
       </div>
     </div>
   </div>
 
   <div class="pb-4 mt-3 parallax container-fluid section" id="projects">
     <h1 class="text-center py-5 text-light">Projects</h1>
-    <div class="card border border-dark bg-dark text-light" *ngFor="let project of resumeProjects">
+    <div
+      class="card border border-dark bg-dark"
+      *ngFor="let project of resumeProjects"
+    >
       <div class="card-body ml-4">
         <h5 class="card-title">{{ project.title }}</h5>
         <p class="card-text">
           {{ project.description }}
         </p>
-        <a class="btn btn-success" [href]=project.sourceUrl>Github
+        <a class="btn btn-success" [href]="project.sourceUrl"
+          >Github
           <fa-icon [icon]="['fab', 'github']"></fa-icon>
         </a>
-        <a *ngIf="project.projectUrl !== undefined" [href]=project.projectUrl class="btn btn-primary ml-2">Go There
-          <fa-icon [icon]="['fas','arrow-right']"></fa-icon>
+        <a
+          *ngIf="project.projectUrl !== undefined"
+          [href]="project.projectUrl"
+          class="btn btn-primary ml-2"
+          >Go There
+          <fa-icon [icon]="['fas', 'arrow-right']"></fa-icon>
         </a>
       </div>
     </div>
   </div>
+</div>
