--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,39 +1,37 @@
-.name-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  @media only screen and (min-width: 768px) {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-  color: rgba(255, 255, 255, 0.92);
+.component-container {
   background-color: rgba(0, 0, 0, 0.92);
-}
-
-.site-links-group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-p {
-  font-size: 1.05rem;
-}
-
-.skill {
   color: rgba(255, 255, 255, 0.92);
-  align-items: center;
-  text-align: center;
 
-  fa-icon {
-    font-size: 1.5rem;
+  .name-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    @media only screen and (min-width: 768px) {
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+    }
   }
-}
 
-@media only screen and (min-width: 768px) {
+  .site-links-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .skill {
+    align-items: center;
+    text-align: center;
+
+    fa-icon {
+      font-size: 1.5rem;
+    }
+  }
+
   .section {
-    max-width: 70%;
+    @media only screen and (min-width: 768px) {
+      max-width: 62%;
+    }
   }
 }
