flex and spacing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <div class="component-container">
   <div class="name-header">
-    <div class="d-inline-block">
+    <div class="d-block">
       <h1 class="position-relative text-center container" id="bigNameTitle">
         SamBaumohl.com
       </h1>
-      <h4 class="text-center d-block mb-1">
+      <h5 class="text-center d-block mb-1">
         Sam Baumohl is a full-stack developer from Missouri.
-      </h4>
+      </h5>
       <div
-        class="site-links-group row mt-3 mx-auto px-0 container"
+        class="site-links-group mt-3 mx-auto px-0 container"
         role="group"
         aria-label="Site Links"
       >
-        <div class="col-sm text-center mt-2">
+        <div class="text-center mt-2">
           <a
             type="button"
             class="btn btn-success mx-auto"
@@ -21,7 +21,7 @@
             <fa-icon [icon]="['fab', 'github']"></fa-icon>
           </a>
         </div>
-        <div class="col-sm text-center mt-2">
+        <div class="text-center mt-2">
           <a
             type="button"
             class="btn btn-warning mx-auto"
@@ -30,7 +30,7 @@
             <fa-icon [icon]="['fas', 'key']"></fa-icon>
           </a>
         </div>
-        <div class="col-sm text-center mt-2">
+        <div class="text-center mt-2">
           <a
             type="button"
             class="btn btn-info mx-auto"
@@ -39,7 +39,7 @@
             <fa-icon [icon]="['fas', 'envelope']"></fa-icon>
           </a>
         </div>
-        <div class="col-sm text-center mt-2">
+        <div class="text-center mt-2">
           <a
             type="button"
             class="btn btn-primary mx-auto"
