--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     padding-top: 2rem;
-    padding-bottom: 3rem;
+    padding-bottom: 1rem;
     @media only screen and (min-width: 768px) {
       padding-top: 5rem;
       padding-bottom: 5rem;
@@ -17,7 +17,10 @@
   .site-links-group {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    @media only screen and (max-width: 768px) {
+      flex-direction: column-reverse;
+    }
   }
 
   .skill {
