--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,12 @@
   background-color: rgba(0, 0, 0, 0.92);
   color: rgba(255, 255, 255, 0.92);
 
+  .section {
+    @media only screen and (min-width: 768px) {
+      max-width: 62%;
+    }
+  }
+
   .name-header {
     display: flex;
     align-items: center;
@@ -18,9 +24,6 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    @media only screen and (max-width: 768px) {
-      flex-direction: column-reverse;
-    }
   }
 
   .skill {
@@ -32,9 +35,9 @@
     }
   }
 
-  .section {
-    @media only screen and (min-width: 768px) {
-      max-width: 62%;
-    }
+  .projects {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 }
