--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,92 +1,69 @@
-  <div class="parallax fill-screen flex-center">
-    <div class="d-inline-block">
+<div class="component-container">
+  <div class="name-header">
+    <div class="d-block">
       <h1 class="position-relative text-center container" id="bigNameTitle">
         SamBaumohl.com
       </h1>
-      <h4 class="text-center d-block mb-1">
-        I am Sam Baumohl, a student and a junior developer.
-      </h4>
-      <div class="site-links-group row mt-3 mx-auto px-0 container" role="group" aria-label="Site Links">
-        <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-success mx-auto" href="https://github.com/MeMeBigProgrammer">Github
-            <fa-icon [icon]="['fab','github']"></fa-icon>
-          </a>
-        </div>
-        <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-warning mx-auto" href="assets/pgp/key.txt">PGP
-            <fa-icon [icon]="['fas','key']"></fa-icon>
-          </a>
-        </div>
-        <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-info mx-auto" href="mailto:mail@sambaumohl.me">Email
-            <fa-icon [icon]="['fas','envelope']"></fa-icon>
-          </a>
-        </div>
-        <div class="col-sm text-center mt-2">
-          <a type="button" class="btn btn-primary mx-auto" href="https://www.linkedin.com/in/sam-baumohl09">Linkedin
-            <fa-icon [icon]="['fab','linkedin']"></fa-icon>
+      <h5 class="text-center d-block mb-1">
+        Sam Baumohl is a full-stack developer from Missouri.
+      </h5>
+      <div
+        class="site-links-group mt-3 mx-auto px-0 container"
+        aria-label="Site Links"
+      >
+        <div class="text-center" *ngFor="let link of headerLinks">
+          <a
+            [href]="link.link"
+            type="button"
+            class="mx-auto"
+            target="_blank"
+            rel="noopener"
+          >
+            <fa-icon [icon]="link.icon" size="2x"></fa-icon>
           </a>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="pb-4 mt-2 container-fluid" id="skills">
-    <h1 class="text-light text-center py-4">Skills</h1>
-    <div class="row py-3">
-      <div class="col pt-2 skill mx-md-5 px-md-5" *ngFor="let skill of skills">
-        <fa-icon [icon]=skill.icon size="10x" [styles]="{'stroke': 'white', 'color': 'white'}"></fa-icon>
-        <h3 class="text-light d-block pt-2">{{skill.name}}</h3>
+  <div class="pb-4 mt-2 container-fluid section" id="skills">
+    <h1 class="text-center pt-5 pb-1">Skills</h1>
+    <div class="row">
+      <div class="col pt-2 skill px-md-5" *ngFor="let skill of skills">
+        <fa-icon
+          [icon]="skill.icon"
+          size="6x"
+          [styles]="{
+            stroke: 'rgba(255, 255, 255, 0.92)',
+            color: 'rgba(255, 255, 255, 0.92)'
+          }"
+        ></fa-icon>
+        <h3 class="d-block pt-2">{{ skill.name }}</h3>
       </div>
     </div>
   </div>
 
-  <div class="parallax pb-4 mt-3" id="debate">
-    <h1 class="text-center pt-5 pb-2">Debate Casefiles</h1>
-    <p class="text-center pt-0 pb-4">
-      These are case files that I have used in tournaments. 
-    </p>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col px-1 py-2" *ngFor="let case of debateCases">
-          <div class="card shadow-lg mx-auto" style="width: 20rem; min-height:16rem;">
-            <div class="card-body">
-              <h5 class="card-title">
-                {{ case.title }}
-              </h5>
-              <p class="card-text">
-                <strong>{{ case.time }}</strong>: {{ case.resolution }}
-              </p>
-              <div class="debate-buttons">
-                <a [href]=case.caseUrl class="btn btn-primary">Get Case
-                  <fa-icon [icon]="['fas','arrow-down']"></fa-icon>
-                </a>
-                <a class="btn btn-warning ml-3" rel="noopener noreferrer" [href]=case.checksumUrl
-                  target="_blank">Checksum
-                  <fa-icon [icon]="['fas','check-square']"></fa-icon>
-                </a>
-              </div>
-            </div>
-          </div>
+  <div class="pb-4 mt-3 container-fluid section" id="projects">
+    <h1 class="text-center pt-5 pb-1 text-light">Projects</h1>
+    <div class="projects">
+      <div *ngFor="let project of resumeProjects">
+        <div class="ml-4">
+          <h5>{{ project.title }}</h5>
+          <p>
+            {{ project.description }}
+          </p>
+          <a [href]="project.sourceUrl">
+            <fa-icon [icon]="['fab', 'github']" size="2x"></fa-icon>
+          </a>
+          <a
+            *ngIf="project.projectUrl !== undefined"
+            [href]="project.projectUrl"
+            class="ml-4"
+          >
+            <fa-icon [icon]="['fas', 'arrow-right']" size="2x"></fa-icon>
+          </a>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="pb-4 mt-3 text-white" id="projects">
-    <h1 class="text-center py-5 text-light">Projects</h1>
-    <div class="card border border-dark bg-dark text-light" *ngFor="let project of resumeProjects">
-      <div class="card-body ml-4">
-        <h5 class="card-title">{{ project.title }}</h5>
-        <p class="card-text">
-          {{ project.description }}
-        </p>
-        <a class="btn btn-success" [href]=project.sourceUrl>Github
-          <fa-icon [icon]="['fab', 'github']"></fa-icon>
-        </a>
-        <a *ngIf="project.projectUrl !== undefined" [href]=project.projectUrl class="btn btn-primary ml-2">Go There
-          <fa-icon [icon]="['fas','arrow-right']"></fa-icon>
-        </a>
-      </div>
-    </div>
-  </div>
+</div>
