--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,47 +1,43 @@
-.parallax {
-  /* The image used */
-  /*background-color: black;*/
-  background-image: url(../assets/background/index.webp);
+.component-container {
+  background-color: rgba(0, 0, 0, 0.92);
+  color: rgba(255, 255, 255, 0.92);
 
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.fill-screen {
-  min-height: 100%;
-  height: 100%;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.site-links-group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-p {
-  font-size: 1.05rem;
-}
-
-.skill {
-  align-items: center;
-  text-align: center;
-
-  fa-icon {
-    font-size: 1.5rem;
+  .section {
+    @media only screen and (min-width: 768px) {
+      max-width: 62%;
+    }
   }
 
-}
+  .name-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    @media only screen and (min-width: 768px) {
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+    }
+  }
 
-.debate-buttons {
-  position: absolute;
-  bottom: 20px;
+  .site-links-group {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .skill {
+    align-items: center;
+    text-align: center;
+
+    fa-icon {
+      font-size: 1.5rem;
+    }
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
