some styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
       <h1 class="position-relative text-center container" id="bigNameTitle">
         SamBaumohl.com
       </h1>
-      <h5 class="text-center d-block mb-1">
+      <h4 class="text-center d-block mb-1">
         Sam Baumohl is a full-stack developer from Missouri.
-      </h5>
+      </h4>
       <div
         class="site-links-group mt-3 mx-auto px-0 container"
         aria-label="Site Links"
@@ -26,8 +26,9 @@
     </div>
   </div>
 
-  <div class="pb-4 mt-2 container-fluid section" id="skills">
-    <h1 class="text-center pt-5 pb-1">Skills</h1>
+  <div class="pb-5 mt-2 container-fluid section" id="skills">
+    <hr class="line">
+    <h1 class="text-center py-4">Skills</h1>
     <div class="row">
       <div class="col pt-2 skill px-md-5" *ngFor="let skill of skills">
         <fa-icon
@@ -43,8 +44,9 @@
     </div>
   </div>
 
-  <div class="pb-4 mt-3 container-fluid section" id="projects">
-    <h1 class="text-center pt-5 pb-1 text-light">Projects</h1>
+  <div class="pb-5 mt-3 container-fluid section" id="projects">
+    <hr class="line">
+    <h1 class="text-center py-4 text-light">Projects</h1>
     <div class="projects">
       <div *ngFor="let project of resumeProjects">
         <div class="ml-4">
