--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .component-container {
-  background-color: rgba(0, 0, 0, 0.92);
-  color: rgba(255, 255, 255, 0.92);
+  background-color: #18191A;
+  color: rgba(255, 255, 255, 0.90);
+  height: 100%;
 
   .section {
     @media only screen and (min-width: 768px) {
@@ -9,6 +10,8 @@
   }
 
   .name-header {
+    min-height: 97%;
+    height: 97%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,4 +43,11 @@
     flex-direction: row;
     justify-content: space-evenly;
   }
+
+  .line {
+    color:rgba(255, 255, 255, 0.92);
+    background-color: rgba(255, 255, 255, 0.92);
+  }
 }
+
+ 
