--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,7 @@
     <div class="row">
       <div class="col pt-2 skill px-md-5" *ngFor="let skill of skills">
         <fa-icon
+          *ngIf="!skill.isDevicon"
           [icon]="skill.icon"
           size="6x"
           [styles]="{
@@ -39,6 +40,11 @@
             color: 'rgba(255, 255, 255, 0.92)'
           }"
         ></fa-icon>
+        <i
+          [class]="skill.icon"
+          style="font-size: 9rem"
+          *ngIf="skill.isDevicon"
+        ></i>
         <h3 class="d-block pt-2">{{ skill.name }}</h3>
       </div>
     </div>
