--- a/react/nextjs-blog/styles/global.scss
+++ b/react/nextjs-blog/styles/global.scss
@@ -30,6 +30,29 @@ h6 {
   font-weight: 500;
 }
 
+h1 {
+  font-size: 2.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0;
+}
+
 .canvas {
   height: 100%;
   width: 100%;
