--- a/react/nextjs-blog/components/Title/Title.module.scss
+++ b/react/nextjs-blog/components/Title/Title.module.scss
@@ -22,13 +22,6 @@
   }
   margin: auto;
   box-sizing: border-box;
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  h4 {
-    font-size: 1.5rem;
-  }
 
   h1,
   h4 {
@@ -56,10 +49,7 @@
   @media only screen and (min-width: 768px) {
     max-width: 62%;
   }
-  h1 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
+  margin-bottom: 3rem;
 }
 
 .skillParent {
@@ -88,4 +78,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-bottom: 2rem;
+  margin-top: 1.5rem;
 }
