--- a/components/Title/Title.module.scss
+++ b/components/Title/Title.module.scss
@@ -81,3 +81,12 @@
   margin-bottom: 2rem;
   margin-top: 1.5rem;
 }
+
+.link {
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: #024a9c;
+}
