--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,23 +20,17 @@ const { description } = AppConfig;
 ---
 
 <Base head={{ title, description }}>
-  <div class="h-full min-h-full flex my-auto items-center justify-center flex-col">
+  <div class="container ">
+  <div class="h-full min-h-full flex my-auto items-center justify-center flex-col drop-shadow-xl ">
     <h1 class="text-8xl font-light block m-20">SAMUEL BAUMOHL</h1>
-    <!-- <div class="flex-inline">
-      {
-        Links.map((val) => (
-          <p class="inline-block">{" "}| {val + " "}|</p>
-        ))
-      }
-    </div> -->
     <h1 class="text-xl font-thin">Software Developer & Student @ The University of Wisconsin-Madison</h1>
   </div>
-  <div>
-    <ul>
-      <li class="font-intelonemono">Stuff</li>
-      <li class="font-intelonemono">Stuff</li>
-      <li class="font-intelonemono">Stuff</li>
-      <li class="font-intelonemono">Stuff</li>
-    </ul>
-  </div>
+  <!-- <div class="flex-inline ">
+    {
+      Links.map((val) => (
+        <p class="inline-block font-thin">{val}</p>
+      ))
+    }
+  </div> -->
+</div>
 </Base>
