--- a/src/templates/Base.astro
+++ b/src/templates/Base.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/main.css';
+import '@fontsource/raleway'
+import '@fontsource/lato'
 import { AppConfig } from '@/utils/AppConfig';
 
 export interface Props {
