--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,24 +13,41 @@ import { AppConfig } from "@/utils/AppConfig";
 const { title } = AppConfig;
 const { description } = AppConfig;
 
-// const Links : string[] = [
-//   "PGP Key", "Email", "LinkedIn", "Projects", "Resume", "Github", "Blog"
-// ];
+const Links: string[] = [
+  "PGP Key",
+  "Email",
+  "LinkedIn",
+  "Projects",
+  "Resume",
+  "Github",
+  "Blog",
+];
 
+// {Links.map((val) => <p class="font-thin px-5 py-5 block">{val}</p>)}
 ---
 
 <Base head={{ title, description }}>
-  <div class="container ">
-  <div class="h-full min-h-full flex my-auto items-center justify-center flex-col drop-shadow-xl ">
-    <h1 class="text-8xl font-light block m-20">SAMUEL BAUMOHL</h1>
-    <h1 class="text-xl font-thin">Software Developer & Student @ The University of Wisconsin-Madison</h1>
+  <div
+    class="text-celadon h-full min-h-full grid grid-flow-col w-4/5 mx-auto py-20"
+  >
+    <div class="">
+      <h1 class="w-content text-8xl font-extralight">Samuel</h1>
+      <h1 class="w-content text-8xl font-extralight">Baumohl</h1>
+      <p class="mt-20 w-1/3">
+        Samuel Baumohl is a student at the University of Wisconsin-Madison. I
+        study Computer Sciences and Legal Studies at the Honors College of
+        Letters and Sciences. I work for Beyond Creative, which creates award
+        winning advertisement experiences, as a Gameplay Programmer.
+      </p>
+    </div>
+    <div class="flex flex-col space-between">
+      {
+        Links.map((val) => (
+          <a class="text-6xl mt-8 hover:underline hover:underline-offset-2 decoration-pacific font-extralight">
+            {val}
+          </a>
+        ))
+      }
+    </div>
   </div>
-  <!-- <div class="flex-inline ">
-    {
-      Links.map((val) => (
-        <p class="inline-block font-thin">{val}</p>
-      ))
-    }
-  </div> -->
-</div>
 </Base>
