--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,12 @@ const Links: string[] = [
 
 <Base head={{ title, description }}>
   <div
-    class="text-celadon h-full min-h-full grid grid-flow-col w-4/5 mx-auto py-20"
+    class="text-celadon h-full min-h-full grid md:grid-cols-2 grid-cols-1 w-4/5 mx-auto py-20"
   >
-    <div class="">
+    <div class="pr-20">
       <h1 class="w-content text-8xl font-extralight">Samuel</h1>
       <h1 class="w-content text-8xl font-extralight">Baumohl</h1>
-      <p class="mt-20 w-1/3">
+      <p class="mt-20 w-132">
         Samuel Baumohl is a student at the University of Wisconsin-Madison. I
         study Computer Sciences and Legal Studies at the Honors College of
         Letters and Sciences. I work for Beyond Creative, which creates award
@@ -43,7 +43,7 @@ const Links: string[] = [
     <div class="flex flex-col space-between">
       {
         Links.map((val) => (
-          <a class="text-6xl mt-8 hover:underline hover:underline-offset-2 decoration-pacific font-extralight">
+          <a class="md:pl-0 pl-16 text-6xl mb-8 underline underline-offset-2 hover:underline-offset-8 decoration-pacific font-extralight w-content">
             {val}
           </a>
         ))
