--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,53 +1,115 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import BaseBody from "../components/BaseBody.astro";
+import { Icon } from "astro-icon";
+
+const links = new Map([
+	["Github", "github"],
+	["Email", "mail"],
+	["Instagram", "instagram"],
+	["LinkedIn", "linkedin"],
+	["PGP Key", "key"],
+]);
+
+const skills = new Map([
+	["Frameworks", ["Angular", "React.js", "Astro", "NodeJS"]],
+	["Languages", ["Java", "Python", "Javascript", "Typescript", "HTML", "CSS"]],
+	["OtherTools", ["AWS", "Docker", "Git", "Linux", "PostgreSQL", "SQL"]],
+]);
+const skillBoxStyle = "grow border border-black rounded-md";
 ---
 
 <!doctype html>
-<html lang="en">
+<html
+	lang="en"
+	class="bg-gradient-to-tl from-primary from-1% to-background to-75%"
+>
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<div class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
-				Content, I love content
+	<body class="font-thin font-serif">
+		<div class="p-5 text-text">
+			<div class="h-100 border rounded-md border-black">
+				<div class="py-24 px-20">
+					<h1 class="text-9xl font-semibold text-black">Samuel Baumohl</h1>
+					<p class="text-lg">
+						I'm a software developer from Saint Louis, Missouri. I'm a Computer
+						Sciences, Legal Studies, and L&S Honors Student at the University of
+						Wisconsin Madison.
+					</p>
+				</div>
+				<div>
+					{
+						Array.from(links.entries()).map(([key, value]) => (
+							<button class="first:ml-20 border-l-0 first:border-l p-2 border-t border-x border-black text-justify hover:underline">
+								<Icon name={value} class="w-5 float-left mr-1" />
+								{key}
+							</button>
+						))
+					}
+				</div>
 			</div>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to
-				build a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like
-				Tailwind, React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
+		</div>
+
+		<div class="my-5 text-center transparent">
+			<h1 class="text-7xl">My Skills</h1>
+			<div class="flex flex-row md:gap-40 gap-4 py-24 px-48 text-2xl">
+				{
+					Array.from(skills.entries()).map(([key, value]) => (
+						<div class={skillBoxStyle}>
+							<h2 class="text-4xl mb-3">{key}</h2>
+							<ul>
+								{value.map((d) => (
+									<li>{d}</li>
+								))}
+							</ul>
+						</div>
+					))
+				}
+			</div>
+		</div>
+
+		<div class="p-5 font-semibold text-center">
+			<h1 class="text-7xl">My Projects</h1>
+			<div class="flex flex-row md:gap-40 gap-4 py-24 px-48 text-2xl">
+				{
+					Array.from(skills.entries()).map(([key, value]) => (
+						<div class={skillBoxStyle}>
+							<h2 class="text-4xl mb-3">{key}</h2>
+							<ul>
+								{value.map((d) => (
+									<li>{d}</li>
+								))}
+							</ul>
+						</div>
+					))
+				}
+			</div>
+		</div>
+		<style>
+			.transparent {
+				background-color: rgba(170, 170, 170, 0.22);
+			}
+
+			.outer-spin-color {
+				background-color: linear-gradient(
+					/* -45deg, */
+					rgba(255, 0, 0, 1) 0%,
+					rgba(255, 154, 0, 1) 10%,
+					rgba(208, 222, 33, 1) 20%,
+					rgba(79, 220, 74, 1) 30%,
+					rgba(63, 218, 216, 1) 40%,
+					rgba(47, 201, 226, 1) 50%,
+					rgba(28, 127, 238, 1) 60%,
+					rgba(95, 21, 242, 1) 70%,
+					rgba(186, 12, 248, 1) 80%,
+					rgba(251, 7, 217, 1) 90%,
+					rgba(255, 0, 0, 1) 100%
+				);
+			}
+		</style>
 	</body>
 </html>
