header, clear formatting

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
+import "@fontsource-variable/playfair-display";
 import BlogPost from '../../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
