--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import "@fontsource-variable/playfair-display";
 
 <header>
 	<nav>
-		<div class="internal-links font-serif">
+		<div class="internal-links font-sans">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
 		</div>
