--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const projects = [
 	<body class="font-thin font-serif">
 		<Header/>
 		<div class="p-5 text-text">
-			<div class="h-100 border rounded-md border-black">
+			<div class="h-100 border rounded-md border-black shadow-2xl">
 				<div class="sm:py-24 py-6 sm:px-20 px-4">
 					<h1 class="sm:text-9xl text-7xl font-semibold text-black" id="name"></h1>
 					<p class="text-lg mt-4">
@@ -124,7 +124,7 @@ const projects = [
 			<div class="flex md:flex-row flex-col lg:gap-40 gap-4 sm:py-24 py-6 sm:px-48 px-4">
 				{
 					projects.map((val) => (
-						<div class="grow border border-black rounded-md flex-1 basis-0 p-4">
+						<div class="grow border border-black rounded-md flex-1 basis-0 p-4 shadow-2xl">
 							<h2 class="text-4xl mb-3">{val.title}</h2>
 							<p class="text-left mb-3">{val.description}</p>
 							<div class="flex flex-row">
@@ -172,12 +172,13 @@ const projects = [
 		i++;
 		await new Promise(r => setTimeout(r, 80));
 	}
+
 	nameElement.innerHTML = nameElement.innerHTML.slice(0, nameElement.innerHTML.length - 1)
 
 	for (let j = 0; j < 10 && nameElement; j ++) {
-		await new Promise(r => setTimeout(r, 1000));
+		await new Promise(r => setTimeout(r, 600));
 		nameElement.innerHTML = nameElement.innerHTML.slice(0, nameElement.innerHTML.length - 1)
-		await new Promise(r => setTimeout(r, 1000));
+		await new Promise(r => setTimeout(r, 600));
 		nameElement.innerHTML += '.'
 
 	}
